refact: use clamp